--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
